feat: расширение парсера СП и подготовка к интеграции с BSL LS
Главное:
- Поднял зависимости под Java 21 (Lombok 1.18.34, JUnit 5.11.4, jsoup 1.18.3,
  + junit-platform-launcher для Gradle 9).
- Расширен HtmlParser: sinceVersion / deprecatedSinceVersion (различение
  нескольких <p class="V8SH_versionInfo"> по префиксу), syntaxText,
  defaultValue параметра, examples, seeAlso, returnValueDescription.
  Добавлен parseEnumValuePage (раньше значения перечислений шли только
  как имя, без описания).
- Фикс багов парсера: XDTO-блурб после <BR> в "Доступность:" больше не
  попадает в список доступностей; угловые скобки в параметрах событий и
  конструкторов снимаются; NPE в PlatformContextProvider при отсутствии
  PlatformGlobalContext.
- API api/Context*: javadoc, новые методы (sinceVersion, deprecatedSinceVersion,
  isGeneric, examples, seeAlso, returnValueDescription, syntaxText, defaultValue).
  Новый утилитный класс ContextNames.isGeneric — эвристика по угловым
  скобкам в имени для пометки generic-типов вроде "СправочникСсылка.<Имя справочника>".
- HbkTreeParser: снято отбрасывание <…>-свойств — теперь они проходят и
  маркируются isGeneric(). Прокинуты все новые поля в Platform*. Дубликат
  построения параметра/сигнатуры вынесен в helper'ы.
- Platform* реализации: все семь классов получили новые поля через
  @Builder.Default и override.

Entry points и автодетект платформы:
- PlatformFinder — поиск установленных версий 1С на машине (Windows/Linux/
  macOS), сравнение версий, findLatest()/findVersion(v). Аналог
  oscript-библиотеки v8find для базовых сценариев.
- PlatformContextGrabber.fromHbk() / fromPlatformBin() / autoDetect()
  factory-методы. Если workDir не задан — используется временный каталог.
  Старый конструктор сохранён для обратной совместимости.

Тесты:
- HtmlParserTest переписан на санитарные фикстуры, повторяющие реальную
  HBK-разметку с выдуманными именами «Виджет/Widget».
- Новые тесты: PlatformContextProviderTest, PlatformContextStorageTest,
  Con